Feat: added final fixes for launch

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -18,6 +18,10 @@
   font-size: 14px
   margin-right: 1rem
 
+.shopify-info-block
+  p
+    margin-bottom: 0.3rem
+
 .vendor-field
   margin: 10px 0
   font-weight: bold
@@ -27,14 +31,15 @@
 .title-field
   margin: 0 0 8px
   font-size: 14px
-  color: black
+  color: #2a2a2a
+  line-height: 18.5px
 
 .img-container
   display: flex
   align-items: center
   justify-content: center
   background-color: #F8F8F8
-  height: 400px
+  height: 315px
   .product-image, .product-image-two
     background-size: cover
     background-position: center
