--- a/app/views/app_proxy/_price.html.slim
+++ b/app/views/app_proxy/_price.html.slim
@@ -15,10 +15,10 @@
     div
       .heading-container
         span style="color: white; font-weight: bold; font-size: 14px" for="amount"  PRICE RANGE:
-        .js-price-filter-icon.js-show-price-filter
+        .js-price-filter-icon.js-show-price-filter.filter-icon-minus
       div.js-price-container
         input#amount readonly="" style="border:0; color: #fe89b5; font-weight:bold; background-color: #111111; box-shadow: none; padding-left: 0rem" type="text"
       div.js-price-container
         #slider-range
         .price-range-submit
-          = link_to 'Filter Price', 'javascript:void(0)', class: 'button js-filter-price', style: 'background: white; width: 100%'
+          = link_to 'Filter Price', 'javascript:void(0)', class: 'button js-filter-price-mobile', style: 'background: white; width: 100%'
