--- a/app/views/app_proxy/_size.html.slim
+++ b/app/views/app_proxy/_size.html.slim
@@ -3,10 +3,10 @@
     .heading-container
       .filter-size-heading SIZE
       .js-size-filter-icon.js-show-size-filter
-    .filter-size-collection.js-size-container.desktop-filter
+    .filter-size-collection.js-size-container.scroll-filter
       - @size_array.each do |size|
         - multisize = [size] << params[:size]
-        = link_to proxy_prod_path(size: multisize.compact.flatten.uniq, brand: params[:brand], product_type: params[:product_type], price: params[:price], query: params[:query], collection: params[:collection]) do
+        = link_to proxy_prod_path(size: multisize.compact.flatten.uniq, brand: params[:brand], product_type: params[:product_type], price: params[:price], q: params[:q], collection: params[:collection]) do
           - if params[:size] && params[:size].include?(size)
             .black-box-container
               .black-box-parent style='position: relative'
@@ -23,10 +23,10 @@
     .heading-container
       .filter-size-heading style='color: white' SIZE
       .js-size-filter-icon.js-show-size-filter
-    .filter-size-collection.js-size-container
+    .filter-size-collection.js-size-container.scroll-filter style='display: none'
       - @size_array.each do |size|
           - multisize = [size] << params[:size]
-          = link_to proxy_prod_path(size: multisize.compact.flatten.uniq, brand: params[:brand], product_type: params[:product_type], price: params[:price], query: params[:query], collection: params[:collection]) do
+          = link_to proxy_prod_path(size: multisize.compact.flatten.uniq, brand: params[:brand], product_type: params[:product_type], price: params[:price], q: params[:q], collection: params[:collection]) do
           - if params[:size] && params[:size].include?(size)
             .black-box-container
               .black-box-parent style='position: relative'
