--- a/app/assets/stylesheets/modal.sass
+++ b/app/assets/stylesheets/modal.sass
@@ -8,7 +8,7 @@
   &__price
     color: #fe89b5
     font-size: 22px
-    margin: 0 1rem 1rem 0
+    margin-right: 1rem
 
 .select-box
   display: flex
