--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -34,6 +34,7 @@ body
   display: flex
   justify-content: space-around
   align-items: center
+  margin-top: 0
 
 .openbtn-sub-container
   background-color: #646464
@@ -124,3 +125,9 @@ body
     padding: 0 !important
   .js-load-more
     width: 100%
+  .img-container
+    height: 163px
+  .the-modal-sub
+    height: 320px !important
+  .main-content
+    padding-top: 5px !important
