fix: added momentum to scroll

--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -115,6 +115,7 @@ body
     height: 100% !important
     width: 100% !important
     overflow-y: auto !important
+    -webkit-overflow-scrolling: touch !important
     overflow-x: hidden
   .the-modal-sub-two
   .box-2
