--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -9,12 +9,13 @@
 
 // We include everything by default.  To slim your CSS, remove components you don't use.
 
-@include foundation-global-styles;
+// @include foundation-global-styles;
 @include foundation-xy-grid-classes;
-//@include foundation-grid;
+@include foundation-grid;
 @include foundation-flex-grid;
 @include foundation-flex-classes;
 @include foundation-typography;
+
 @include foundation-forms;
 @include foundation-button;
 @include foundation-accordion;
@@ -25,7 +26,7 @@
 @include foundation-callout;
 @include foundation-card;
 @include foundation-close-button;
-@include foundation-menu;
+// @include foundation-menu;
 @include foundation-menu-icon;
 @include foundation-drilldown-menu;
 @include foundation-dropdown;
