--- a/app/views/test_admins/_product_fields.html.slim
+++ b/app/views/test_admins/_product_fields.html.slim
@@ -6,6 +6,6 @@
   .title-container
     .title-field = product.title
   .price-container
-    .price-field = "£ #{product.price} GPB"
+    .price-field = "£ #{product.price} GBP"
     - if product.compare_at_price != 0.0
       .compare-at-price = "£ #{product.compare_at_price}"
