--- a/app/views/home/_product_fields.html.slim
+++ b/app/views/home/_product_fields.html.slim
@@ -25,7 +25,7 @@
           div style="display: flex; align-items: center"
             = link_to 'Add to Cart', 'javascript:void(0)', class: 'button js-cart-btn', style: 'background-color: #000000; width: 100%;font-size: 17px;font-weight: bold;'
           .shopify-info-block
-            = product.body_html.html_safe
+            = product.body_html.try(:html_safe)
           / .prod-attr__small very good condition, vintage Adidas
           / .prod-attr__small Size on label - L
           / .prod-attr__small Our recomended size - L
