fix: fixed the styling

--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -5,7 +5,7 @@ body
   height: 100%
   width: 0
   position: fixed
-  z-index: 1
+  z-index: 3
   top: 0
   left: 0
   background-color: #111
@@ -45,6 +45,7 @@ body
 .close-filter-container
   color: white
   width: 100%
+  margin-bottom: 2rem
   display: flex
   align-items: center
   justify-content: space-between
