--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -135,6 +135,7 @@
   font-size: 16px
   border: 1px solid #ccc
   cursor: pointer
+  margin-right: 5px
   display: flex
   width: 150px
   justify-content: space-between
