--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -78,6 +78,11 @@ body
     position: absolute
     top: 10px
     right: 16px
+  .the-modal-sub
+    height: 540px !important
+  .the-modal
+    height: auto !important
+    // background-color: red
 
 // desktop
 @media screen and (min-width: 1025px)
@@ -89,6 +94,11 @@ body
     position: absolute
     top: 10px
     right: 16px
+  .the-modal-sub
+    height: 540px !important
+  .the-modal
+    height: auto !important
+    // background-color: red !important
 
 // mobile
 @media screen and (min-width: 0px) and (max-width: 800px)
