--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -128,6 +128,7 @@
   background-position: center
   background-size: cover
   margin-left: auto
+  margin-right: 7px
 
 .remove-filter
   float: right
