--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -39,7 +39,7 @@
   align-items: center
   justify-content: center
   background-color: #F8F8F8
-  height: 315px
+  height: calc(100vw/5)
   .product-image, .product-image-two
     background-size: cover
     background-position: center
@@ -156,6 +156,7 @@
   min-width: 160px
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2)
   z-index: 1
+  top: -28px
   a
     color: black
     padding: 12px 16px
@@ -164,10 +165,13 @@
     &:hover
       background-color: #f1f1f1
 
-.dropdown:hover
+.dropdown:active
   .dropdown-content
     display: block
   .dropbtn
+
+.dropdown-content:hover
+  display: block
 
 .arrow-down
   width: 0
