--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -128,6 +128,10 @@ body
     overflow-y: auto !important
     -webkit-overflow-scrolling: touch !important
     overflow-x: hidden
+  .scroll-filter
+    -webkit-overflow-scrolling: touch !important
+  .sidenav
+    -webkit-overflow-scrolling: touch !important
   .the-modal-sub-two
   .box-2
     width: 100%
