fix: added the fix back for the admin section

--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -98,6 +98,9 @@ body
     height: 540px !important
   .the-modal
     height: auto !important
+  .cart
+    img
+      margin-top: 0px !important
     // background-color: red !important
 
 // mobile
