--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -133,7 +133,7 @@
   color: white
   padding: 10px
   font-size: 16px
-  border: 1px solid #ccc
+  border: 1px solid #ccc !important
   cursor: pointer
   margin-right: 5px
   display: flex
@@ -153,10 +153,9 @@
   display: none
   position: absolute
   background-color: #f9f9f9
-  min-width: 160px
+  min-width: 150px
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2)
   z-index: 1
-  top: -28px
   a
     color: black
     padding: 12px 16px
@@ -165,13 +164,13 @@
     &:hover
       background-color: #f1f1f1
 
-.dropdown:active
-  .dropdown-content
-    display: block
-  .dropbtn
-
-.dropdown-content:hover
-  display: block
+// .dropdown:active
+//   .dropdown-content
+//     display: block
+//   .dropbtn
+//
+// .dropdown-content:hover
+//   display: block
 
 .arrow-down
   width: 0
