fix: added final tweaks for last fixes before go live

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -39,7 +39,8 @@
   align-items: center
   justify-content: center
   background-color: #F8F8F8
-  height: calc(100vw/5)
+  height: calc(100vw/5.1)
+  transition: 1s
   .product-image, .product-image-two
     background-size: cover
     background-position: center
