--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -5,14 +5,14 @@ body
   height: 100%
   width: 0
   position: fixed
-  z-index: 3
+  z-index: 5000
   top: 0
   left: 0
   background-color: #111
   overflow-x: hidden
   transition: 0.5s
   a
-    padding: 8px 0
+    padding: 5px 0 6px 0
     text-decoration: none
     font-size: 16px
     color: #818181
@@ -126,7 +126,10 @@ body
   .row-style
     height: 60% !important
   .quick-view-button
-    width: 50%  !important
+    height: 25px !important
+  .quick-view-text
+    font-size: 11px !important
+    top: 5px !important
   .the-modal-sub
     width: 100% !important
   .the-modal
@@ -139,6 +142,8 @@ body
     -webkit-overflow-scrolling: touch !important
   .sidenav
     -webkit-overflow-scrolling: touch !important
+    height: 103%
+    overflow: scroll
   .the-modal-sub-two
   .box-2
     width: 100%
@@ -154,3 +159,5 @@ body
     height: 320px !important
   .main-content
     padding-top: 5px !important
+  .app-container
+    // transition: 0.5s
