--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -142,6 +142,17 @@
 .scroll-filter
   max-height: 20em
   overflow-y: scroll
+  overflow-x: hidden
+
+.filter-overlay
+  background: rgba(0,0,0,.2)
+  height: 100%
+  width: 100%
+  z-index: 4800
+  top: 0
+  left: 0
+  position: fixed
+  display: none
 
 #shopify-section-cust-footer
 .penbtn-container
