--- a/app/assets/stylesheets/search_results_index.sass
+++ b/app/assets/stylesheets/search_results_index.sass
@@ -1,17 +1,16 @@
 .quick-view-button
-  background-color: black
-  width: 25%
-  height: 25px
-  color: white
-  position: absolute
-  top: 0
-  line-height: 25px
-  right: 0
-  font-weight: bold
-  display: flex
-  align-items: center
+  background: #817F80
+  width: 100%
+  height: 30px
+  text-align: center
   cursor: pointer
-  justify-content: center
+
+.quick-view-text
+  color: white
+  font-weight: bold
+  font-size: 12px
+  position: relative
+  top: 8px
 
 .the-modal
   display: none
