--- a/app/views/home/_product_fields.html.slim
+++ b/app/views/home/_product_fields.html.slim
@@ -1,8 +1,5 @@
 .single-product-container
   - if params[:q]
-    .quick-view-button-container style="width: 100%; display: flex; justify-content: center"
-      .quick-view-button value='#{product.id}'Quick view
-
     .the-modal
       .row.row-style
         .the-modal-sub.medium-8.small-12large-8 style="background-image: url('#{product.first_image_url}'); background-size: cover"
@@ -36,14 +33,18 @@
           p.js-cart-error style="color: red"
 
   .blur-div
-    = link_to "/products/#{product.slug_url}" do
-      .img-container
-        .product-image style="background-image: url('#{product.first_image_url}')" value='#{product.id}'
-        .product-image-two style="display: none; background-image: url('#{product.second_image_url}')"
-      .vendor-field = product.vendor
-      .title-container
-        .title-field = product.title
-      .price-container
-        .price-field = "£ #{product.display_price} GBP"
-        - if product.compare_at_price != 0.0
-          .compare-at-price = "£ #{product.compare_at_display_price}"
+      = link_to "/products/#{product.slug_url}" do
+        .img-container
+          .product-image style="background-image: url('#{product.first_image_url}')" value='#{product.id}'
+          .product-image-two style="display: none; background-image: url('#{product.second_image_url}')"
+      - if params[:q]
+        .quick-view-button
+          span.quick-view-text QUICK VIEW
+      = link_to "/products/#{product.slug_url}" do
+        .vendor-field = product.vendor
+        .title-container
+          .title-field = product.title
+        .price-container
+          .price-field = "£ #{product.display_price} GBP"
+          - if product.compare_at_price != 0.0
+            .compare-at-price = "£ #{product.compare_at_display_price}"
