fix: added margin for mobile cart

--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -159,5 +159,6 @@ body
     height: 320px !important
   .main-content
     padding-top: 5px !important
-  .app-container
-    // transition: 0.5s
+  .cart
+    img
+      margin-top: -6px !important
