--- a/app/views/app_proxy/_type.html.slim
+++ b/app/views/app_proxy/_type.html.slim
@@ -22,8 +22,8 @@
   .filter-type-container
     .heading-container
       .filter-type-heading style='color: white' TYPE
-      .js-type-filter-icon.js-show-type-filter
-    .filter-type-collection.js-type-container.scroll-filter style='display: none'
+      .js-type-filter-icon.js-show-type-filter.filter-icon-minus
+    .filter-type-collection.js-type-container.scroll-filter
       - @product_type.each do |pt|
           - prodtype = [pt] << params[:product_type]
           = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: prodtype.compact.flatten.uniq, price: params[:price], q: params[:q], collection: params[:collection]) do
