--- a/app/views/app_proxy/index.html.slim
+++ b/app/views/app_proxy/index.html.slim
@@ -8,7 +8,7 @@
           a.closebtn.hidden-on-large-screen style="font-size: 20px" href="javascript:void(0)" &times;
         - if @filter_present
           div style="width: 100%;height: 30px;margin-bottom: 3em;"
-            = link_to 'CLEAR ALL', proxy_prod_path(sort_by: params[:sort_by], collection: params[:collection], q: params[:q]), style: 'background: #646464;color: white;float: right;font-weight: bold;width: 100%;text-align: center;'
+            = link_to 'CLEAR ALL', proxy_prod_path(sort_by: params[:sort_by], collection: params[:collection]), style: 'background: #646464;color: white;float: right;font-weight: bold;width: 100%;text-align: center;'
 
         - if params[:brand].present?
           - params[:brand].each do |brand|
@@ -134,7 +134,7 @@
   .clearfix.main-container
     - if @filter_present
       .js-clear-filter.hidden-on-small-screen style="width: 15%; height: 30px; position: relative; z-index: 4; top: -52px; overflow: hidden;"
-        = link_to 'CLEAR ALL', proxy_prod_path(sort_by: params[:sort_by], collection: params[:collection], q: params[:q]), style: 'background: black; color: white; padding: 2px 20px 4px 19px; float: right; font-weight: bold'
+        = link_to 'CLEAR ALL', proxy_prod_path(sort_by: params[:sort_by], collection: params[:collection]), style: 'background: black; color: white; padding: 2px 20px 4px 19px; float: right; font-weight: bold'
     - if ProductSetting.last.true_filter_on
       .box-1
         .filter-data-options-container.js-main-container.hidden-on-small-screen#js-sidebar-filter
