fix: attempt at issue

--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -142,8 +142,8 @@ body
     -webkit-overflow-scrolling: touch !important
   .sidenav
     -webkit-overflow-scrolling: touch !important
-    height: 103%
-    overflow: scroll
+    height: 100%
+    overflow: auto
   .the-modal-sub-two
   .box-2
     width: 100%
