--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -11,6 +11,7 @@ body
   background-color: #111
   overflow-x: hidden
   transition: 0.5s
+  transform: translate3d(0,0,0)
   a
     padding: 5px 0 6px 0
     text-decoration: none
