fix: added black on buttons

--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -38,7 +38,7 @@ body
   margin-top: 0
 
 .openbtn-sub-container
-  background-color: #646464
+  background-color: black
   width: 49%
   text-align: center
   color: white
